frontend/test/should_pass/global_then_in_package_rule.grg
#using "model.gm"

rule r
{
	modify {
	}
}

package Foo
{
	// was error: r already defined
	rule r
	{
		modify {
		}
	}
}
