frontend/test/should_fail/disallow_action_package_declaration_of_builtin_Debug_package.grg
package Debug
{
}

rule r
{
	modify {
	---
		eval {
//			Debug::halt("");
		}
	}
}
